Added buttons and functionality related to shuffling and dealing

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -29,9 +29,11 @@
             </div>
             
             <div id="action-area">
-                <button id="next-hand" style="display:none;">Next Hand</button>
-                <button id="hit-me" style="display:none;">Hit me</button>
-                <button id="stay" style="display:none;">I'll stay</button>
+                <button id="next-hand" style="display:none;">Cut Deck</button>
+                <button id="hit-me" style="display:none;">Overhand Shuffle</button>
+                <button id="stay" style="display:none;">Riffle Shuffle</button>
+                <button id="deal-poker-hand" style="display:none;">Deal Poker Hand</button>
+                <button id="shuffle-deal" style="display:none;">Shuffle / Deal</button>
             </div>
             
         </div>
