Fix scoring problem with straight hand, and modify UI

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -13,7 +13,7 @@
         
         <div id="game-area">
             <div id="dealer-area">
-                <h2>Dealer (<span id="dealer-number"></span>)</h2>
+                <h2>&nbsp;<span id="dealer-number"></span></h2>
                 <div id="dealer-cards">
                     <!-- Cards will appear here. -->
                 </div>
