Add button and functionality to deal only hearts

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -29,6 +29,7 @@
             
             <div id="action-area">
                 <button id="new-game">New Deck</button>
+                <button id="only-hearts">Only Hearts</button>
                 <button id="next-hand">Cut Deck</button>
                 <button id="hit-me">Overhand Shuffle</button>
                 <button id="stay">Riffle Shuffle</button>
