Add random shuffle, always get new deck from database, and sort new deck by Id

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -33,6 +33,7 @@
                 <button id="next-hand">Cut Deck</button>
                 <button id="hit-me">Overhand Shuffle</button>
                 <button id="stay">Riffle Shuffle</button>
+                <button id="random-shuffle">Random Shuffle</button>
                 <button id="deal-poker-hand">Deal Poker Hand</button>
                 <button id="shuffle-deal">Shuffle / Deal</button>
             </div>
