--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,12 +9,12 @@
 
 <body>
     <h1>Reactor Cards</h1>
-    <div class="game-container">
+    <div class="outer-container">
         
         <div id="game-area">
             <div id="dealer-area">
-                <h2>&nbsp;<span id="dealer-number"></span></h2>
-                <div id="dealer-cards">
+                <h2>&nbsp;<span id="message-display"></span></h2>
+                <div id="playing-cards">
                     <!-- Cards will appear here. -->
                 </div>
             </div>
