--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -18,21 +18,13 @@
                     <!-- Cards will appear here. -->
                 </div>
             </div>
-            <div id="player-area">
-              <!--h2>
-                Player (<span id="player-number"></span>) <span id="announcement"></span>
-              </h2-->
-              <div id="player-cards">
-                    <!-- Cards will appear here. -->
-              </div>
-            </div>
-            
+
             <div id="action-area">
-                <button id="new-game">New Deck</button>
+                <button id="new-deck">New Deck</button>
                 <button id="only-hearts">Only Hearts</button>
-                <button id="next-hand">Cut Deck</button>
-                <button id="hit-me">Overhand Shuffle</button>
-                <button id="stay">Riffle Shuffle</button>
+                <button id="cut-deck">Cut Deck</button>
+                <button id="overhand-shuffle">Overhand Shuffle</button>
+                <button id="riffle-shuffle">Riffle Shuffle</button>
                 <button id="random-shuffle">Random Shuffle</button>
                 <button id="deal-poker-hand">Deal Poker Hand</button>
                 <button id="shuffle-deal">Shuffle / Deal</button>
