--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,12 +3,12 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Reactor Cards</title>
+    <title>Reactive Card Magic</title>
     <link rel="stylesheet" type="text/css" href="./styles.css">
 </head>
 
 <body>
-    <h1>Reactor Cards</h1>
+    <h1>Reactive Card Magic</h1>
     <div class="outer-container">
         
         <div id="game-area">
@@ -22,7 +22,7 @@
             <div id="action-area">
                 <button id="new-deck">New Deck</button>
                 <button id="only-hearts">Only Hearts</button>
-                <button id="cut-deck">Cut Deck</button>
+                <button id="cut-deck">Cut Cards</button>
                 <button id="overhand-shuffle">Overhand Shuffle</button>
                 <button id="riffle-shuffle">Riffle Shuffle</button>
                 <button id="random-shuffle">Random Shuffle</button>
